# notariado-inmobiliario

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: monthly_pipeline.yml
data/raw/ccaa/2026-06-10/: data.parquet
data/raw/ccaa/2026-06-23/: data.parquet
data/raw/codigo_postal/2026-06-10/: data.parquet
data/raw/codigo_postal/2026-06-23/: data.parquet
data/raw/municipio/2026-06-06/: data.parquet
data/raw/nacional/2026-06-06/: data.parquet
data/raw/provincia/2026-06-10/: data.parquet
data/raw/provincia/2026-06-23/: data.parquet
dbt/: dbt_project.yml
dbt/models/: schema.yml
dbt/models/marts/: mart_precios_calculadora.sql
dbt/models/staging/: stg_ccaa.sql  stg_codigo_postal.sql  stg_municipio.sql  stg_nacional.sql  stg_provincia.sql
dbt/seeds/: clase_finca_urbana.csv  tipo_construccion.csv
frontend/data/: precios.json
ingestion/src/: cli.py  export_json.py  pipeline.py
ingestion/src/extractors/: arcgis_client.py  fetcher.py
ingestion/src/parsers/: models.py  parser.py
ingestion/src/storage/: parquet_writer.py
ingestion/src/utils/: config.py  logger.py
