[project]
name = "notariado-inmobiliario"
version = "0.1.0"
description = "Real estate data pipeline from Portal Estadístico del Notariado"
requires-python = ">=3.12"

dependencies = [
    # HTTP client — async, modern, typed
    "httpx>=0.27.0",

    # Data validation and schemas
    "pydantic>=2.7.0",

    # Storage
    "duckdb>=0.10.0",
    "pyarrow>=16.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",

    # Config
    "pydantic-settings>=2.3.0",

    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["ingestion/tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]